--- a/Sass/components/_card.scss
+++ b/Sass/components/_card.scss
@@ -6,6 +6,7 @@
     height: min-content;
     cursor: pointer;
     transition: all .2s ease-in-out;
+    font-family: $mainFont;
 
     &:hover {
         background-color: $hoverColor;
@@ -77,7 +78,7 @@
 }
 
 @include respond(medium) {
-    width: 90%;
+    width: 46%;
 }
 
 @include respond(small) {
