--- a/Sass/components/_twoCard.scss
+++ b/Sass/components/_twoCard.scss
@@ -6,30 +6,29 @@
     height: fit-content;
     margin: 5vh auto;
     font-family: $mainFont;
-    @include respond(small) {
-        width: 100%;
-        padding: 0 1rem;
-    }
-    // @include respond(medium) {
-    //     width: 40%;
-    //     margin: 1vh;
-    // }
     &__info{
-        width: 63%;
-        @include respond(small) {
-            width: 100%;
-            padding: 0 1rem;
-        }
-        @include respond(medium) {
-            width: 40%;
-            margin: 1vh;
-        }
+        width: 65%;
     }
     &__img{
         overflow: hidden;
-        box-shadow: rgba(0, 0, 0, 0.12) 1px 0px 18px 8px;
+        box-shadow: rgba(0, 0, 0, 0.322) 1px 0px 18px 8px;
         img{
             object-fit: cover;
+        }
+    }
+    @include respond(medium){
+        flex-direction: column;
+        &__info{
+            width: 100%;
+        }
+    }
+    @include respond(small){
+        flex-direction: column;
+        &__info{
+            width: 100%;
+        p{
+            margin: 2vh;
+        }
         }
     }
 }
