--- a/Sass/layout/_hero.scss
+++ b/Sass/layout/_hero.scss
@@ -8,6 +8,77 @@
     display: flex;
     align-items: center;
     font-family: $mainFont;
+    filter: brightness(65%);
+
+    .hero-content {
+        margin-left: 35vh;
+        max-width: 500px;
+
+        h1 {
+            font-size: 2rem;
+            font-weight: bold;
+        }
+
+        h3 {
+            margin-top: 0.5rem;
+            font-size: 1rem;
+            font-weight: 600;
+        }
+
+        p {
+            margin-top: 0.5rem;
+            font-size: 1rem;
+        }
+    }
+
+    @include respond(medium) {
+        height: auto;
+        padding: 5rem 3rem;
+        .hero-content {
+            margin-left: 5vh;
+            text-align: center;
+            max-width: 100%;
+
+            h1 {
+                font-size: 1.7rem;
+            }
+
+            h3,
+            p {
+                font-size: 0.9rem;
+            }
+        }
+    }
+
+    @include respond(small) {
+        height: auto;
+        padding: 2rem 1rem;
+
+        .hero-content {
+            margin-left: 0;
+            text-align: center;
+            max-width: 100%;
+
+            h1 {
+                font-size: 1.5rem;
+            }
+
+            h3,
+            p {
+                font-size: 0.85rem;
+            }
+        }
+    }
+}.hero {
+    background-image: url('../assest/medical-slide-1.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 500px;
+    position: relative;
+    color: $text-light;
+    display: flex;
+    align-items: center;
+    font-family: $mainFont;
     filter: brightness( 65% );
     .hero-content {
         margin-left: 35vh;
